# migration-workbench

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  manage.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish-pypi.yml
connectors/: README.md  base.py  coda.py  coda_source.py  google_provider.py  google_sheets.py  router.py  spreadsheet.py  tests.py
data/profile_snapshots/: column_approval_gate2_2026-04-28.json  column_shortlist_2026-04-28.json  deep_profile_coverage_2026-04-28.json  drive_discovery_2026-04-28.json  in_scope_workbook_index_2026-04-28.json  multi_year_broad_profile_coverage_2026-04-28.json  tab_approval_gate1_2026-04-28.json  tab_shortlist_2026-04-28.json
deploy/: spaces.yml
deployment/: README.md  __init__.py  manifest.py  models.py  release_store.py  wb_cli.py
deployment/migrations/: 0001_initial.py  0002_rename_deployment__space_3b83f5_idx_deployment__space_704c54_idx_and_more.py
deployment/tests/: test_manifest.py  test_release_store.py  test_sqlite_path.py
docs/: architecture.md  authoring-importers.md  coda-runbook.md  coda.md  contracts.md  deployment-acceptance-criteria.md  deployment-runbook.md  deployment-spec-v0.2.md  deployment.md  google-auth-runbook.md  google-auth.md  pipeline.md  providers.md  quickstart.md  schema-contract-v1.md  schema-design-loop.md
docs/examples/: coda-live-config.example.json  live-config.example.json  offline-config.example.json  patterns.example.json  workbooks.example.json
example_data/: coda_corpus.example.json  cohort_corpus.example.json  profile_multiyear.farm.example.json  scaffold_workbook_bundle.example.json  scaffold_workbook_table_profile.example.json  scan_coda_formula_columns.example.json  scan_formula_patterns.example.json
example_data/_import_artifacts/: import-summary-20260423T141825169831.json  import-summary-20260423T141830648697.json  import-summary-20260423T141856781904.json
example_data/reference/: blocks.csv  crop_info.csv
examples/: models.py
examples/migrations/: 0001_initial.py
examples/tests/: test_import_reference_example.py
importer/: README.md  base.py  chassis.py  errors.py  lookups.py  parsing.py  sample_guard.py  summary.py
importer/tests/: test_chassis_preflight.py  test_fk_by_text.py  test_parsing_helpers.py  test_sample_guard.py  test_summary_json.py
migration_workbench/: asgi.py  settings.py  sqlite_path.py  test_static_config.py  urls.py  views.py  wsgi.py
profiler/: README.md  contracts.py
profiler/tests/: test_coda_commands.py  test_coda_corpus.py  test_cohort_corpus_tools.py  test_multiyear_tools.py  test_profile_commands.py  test_snapshot_bundle.py  test_spreadsheet_connector.py
scripts/: entrypoint.sh  entrypoint_product.sh  inspect_sheet_formulas.py  new_product.py  run_import.sh  search_workbook_formula_patterns.py
workbook/: README.md  field_mapping.py  models.py  schema_contract.py
(+48 files in other folders)
